CKS -Study/Network-Policy-Learning-Environment/000-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: np-demo
  labels:
    purpose: np-lab
---
apiVersion: v1
kind: Namespace
metadata:
  name: frontend
  labels:
    access: "true"
