CKS -Study/Network-Policy-Learning-Environment/deny-all-egress.yaml

# 

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-egress
  namespace: np-demo
spec:
  podSelector: {}
  policyTypes:
  - Egress
